[project]
name = "test-a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Scott Knight", email = "isk@alumni.stanford.edu" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
test-a = "test_a:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
